2011-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwblob.c, tests/rwfile.c: Validate the data in each image
	frame, validate that each read returns the same number of frames,
	and validate that the correct number of frames was ultimately
	returned.

	* magick/blob.c (SyncBlob): Disable bogus code which attempted to
	replicate the blob I/O object across all images in the list when
	the blob is synced.  Leave a less bogus bit of code in place (but
	commented out) in case such functionality is deemed to actually be
	needed in the future.  The previous code was copying structs on
	top of each other, including a pointer member to a semaphore.

2011-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Changes.rst: Add a new Changes page to wrap up the yearly
	change logs to lessen download size.

	* scripts/changelog2rst.sh: Simple utility to format ChangeLog
	format into something resembling reStructuredText.

	* www/Makefile.am: Use reStructuredText to format the ChangeLog
	files to HTML so that we can inherit the improved formatting and
	page style.

	* coders/pnm.c (ReadPNMImage): Support for multi-frame PNM was
	botched due to on-going edits to support PAM format.

2011-01-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickDescribeImage): Was sending
	descriptive output to stdout rather than returning it in an
	allocated string as intended.

2011-01-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/draw.c, wand/drawing_wand.c (MvgPrintf): Update to handle
	C99 vsnprintf() return values.

	* magick/draw.c, wand/drawing_wand.c (DrawAnnotation): Linux
	glibc does not pass extended text characters if "%.1024s"
	formatting convention is used.  Apparently it assumes that such
	characters may be UTF8 and returns -1 rather than outputting the
	string, even if it is assured to fit.
